
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_6__ TYPE_4__ ;
typedef struct TYPE_5__ TYPE_1__ ;


typedef void* caddr_t ;
struct TYPE_6__ {int iov_len; int iov_base; } ;
struct TYPE_5__ {int msg_namelen; int msg_iovlen; scalar_t__ msg_accrightslen; void* msg_accrights; TYPE_4__* msg_iov; void* msg_name; } ;


 int buf1 ;
 int buf2 ;
 int dodaj_one ;
 int dodaj_two ;
 scalar_t__ fake_adrs ;
 TYPE_4__* iov ;
 TYPE_1__ msg ;
 int printf (char*,...) ;
 int recvmsg (int ,TYPE_1__*,int ) ;
 int sck ;
 int sendmsg (int ,TYPE_1__*,int ) ;
 int show_msg () ;

void new_account(int len){
    iov[0].iov_base=dodaj_one;
    iov[0].iov_len=0x10;
    iov[1].iov_base=dodaj_two;
    iov[1].iov_len=len;
    msg.msg_name=(caddr_t)fake_adrs;
    msg.msg_namelen=0x10;
    msg.msg_iov=iov;
    msg.msg_iovlen=2;
    msg.msg_accrights=(caddr_t)0;
    msg.msg_accrightslen=0;
    printf("SM:  --[0x%04x bytes]--\n",sendmsg(sck,&msg,0)); show_msg();
    printf("\n");

    iov[0].iov_base=buf1;
    iov[1].iov_base=buf2;
    iov[1].iov_len=0x200;
    msg.msg_iovlen=2;
    printf("RM:  --[0x%04x bytes]--\n",recvmsg(sck,&msg,0)); show_msg();
    printf("\n");
}
