; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/irix/remote/extr_19822.c_new_account.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/irix/remote/extr_19822.c_new_account.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_6__ = type { i32, i32 }
%struct.TYPE_5__ = type { i32, i32, i64, i8*, %struct.TYPE_6__*, i8* }

@dodaj_one = common dso_local global i32 0, align 4
@iov = common dso_local global %struct.TYPE_6__* null, align 8
@dodaj_two = common dso_local global i32 0, align 4
@fake_adrs = common dso_local global i64 0, align 8
@msg = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8
@.str = private unnamed_addr constant [25 x i8] c"SM:  --[0x%04x bytes]--\0A\00", align 1
@sck = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [2 x i8] c"\0A\00", align 1
@buf1 = common dso_local global i32 0, align 4
@buf2 = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [25 x i8] c"RM:  --[0x%04x bytes]--\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @new_account(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  %3 = load i32, i32* @dodaj_one, align 4
  %4 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %5 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %4, i64 0
  %6 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %5, i32 0, i32 1
  store i32 %3, i32* %6, align 4
  %7 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %8 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %7, i64 0
  %9 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %8, i32 0, i32 0
  store i32 16, i32* %9, align 4
  %10 = load i32, i32* @dodaj_two, align 4
  %11 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %12 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %11, i64 1
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 1
  store i32 %10, i32* %13, align 4
  %14 = load i32, i32* %2, align 4
  %15 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %16 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %15, i64 1
  %17 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %16, i32 0, i32 0
  store i32 %14, i32* %17, align 4
  %18 = load i64, i64* @fake_adrs, align 8
  %19 = inttoptr i64 %18 to i8*
  store i8* %19, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 5), align 8
  store i32 16, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 0), align 8
  %20 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  store %struct.TYPE_6__* %20, %struct.TYPE_6__** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 4), align 8
  store i32 2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 1), align 4
  store i8* null, i8** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 3), align 8
  store i64 0, i64* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 2), align 8
  %21 = load i32, i32* @sck, align 4
  %22 = call i32 @sendmsg(i32 %21, %struct.TYPE_5__* @msg, i32 0)
  %23 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i32 %22)
  %24 = call i32 (...) @show_msg()
  %25 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  %26 = load i32, i32* @buf1, align 4
  %27 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %28 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %27, i64 0
  %29 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %28, i32 0, i32 1
  store i32 %26, i32* %29, align 4
  %30 = load i32, i32* @buf2, align 4
  %31 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %32 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %31, i64 1
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 1
  store i32 %30, i32* %33, align 4
  %34 = load %struct.TYPE_6__*, %struct.TYPE_6__** @iov, align 8
  %35 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %34, i64 1
  %36 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %35, i32 0, i32 0
  store i32 512, i32* %36, align 4
  store i32 2, i32* getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @msg, i32 0, i32 1), align 4
  %37 = load i32, i32* @sck, align 4
  %38 = call i32 @recvmsg(i32 %37, %struct.TYPE_5__* @msg, i32 0)
  %39 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.2, i64 0, i64 0), i32 %38)
  %40 = call i32 (...) @show_msg()
  %41 = call i32 (i8*, ...) @printf(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.1, i64 0, i64 0))
  ret void
}

declare dso_local i32 @printf(i8*, ...) #1

declare dso_local i32 @sendmsg(i32, %struct.TYPE_5__*, i32) #1

declare dso_local i32 @show_msg(...) #1

declare dso_local i32 @recvmsg(i32, %struct.TYPE_5__*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
